# jsonschema2md2

./: .pre-commit-config.yaml  .prospector.yaml  README.md  SECURITY.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: audit.yaml  delete-old-workflows-run.yaml  main.yaml  pr-checks.yaml  publish.yml  pull-request-automation.yaml  test.yml
ci/: config.yaml  requirements.txt
examples/: basic.json  basic.md  ms2rescore.json  ms2rescore.md  vegetables.json
jsonschema2md/: __init__.py
jsonschema2md2/: __init__.py
tests/: test_jsonschema2md.py
